turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:8: error: not found: value setCOlor
   setCOlor(color.red)
   ^DiskTwo:8: error: not found: value color
   setCOlor(color.red)
            ^DiskTwo:14: error: not found: value setCOlor
   setCOlor(color.black)
   ^DiskTwo:14: error: not found: value color
   setCOlor(color.black)
            ^