turtleart.disktwo.DiskTwo.scala.code
override def run() {
  for(i <- 1 to 9){
    for(i <- 1 to 360/18){
      forward(100)
      backward(100)
      right(1)
    }
   setCOlor(color.red)
   for(i <- 1 to 360/18){
      forward(100)
      backward(100)
      right(1)
    }
   setCOlor(color.black)
  }
}